Fix too narrow width of navigation container

--- a/css/styles.css
+++ b/css/styles.css
@@ -202,7 +202,7 @@ h2, .box h2 {
 
 		position: relative;
 
-		width: 480px;
+		width: 520px;
 		height: 50px;
 
 		top: 16px;
@@ -222,7 +222,7 @@ h2, .box h2 {
 	#navigationContainer {
 		display: block;
 
-		width: 380px;
+		width: 418px;
 		height: 50px;
 
 		margin-left: auto;
